# multi-threads

./: .nfs000000000174c1b3000007ee  CMakeLists.txt  Report.docx  analysis.sh
include/: HW3.h
src/: AverageThreader.cpp  DistMatrixThreader.cpp  SegThreader.cpp  argMax_and_distanceMatrix.cpp  csvFileParser.cpp  main.cpp
